Update common_cmd.sh